--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         async function loadTweets() {
             const response = await fetch('tweets_id_username.csv');
             const text = await response.text();
-            const lines = text.trim().split('\n');
+            const lines = text.replace(/\r/g, '').trim().split('\n');
             tweets = lines.slice(1);
 
             const totalTweets = tweets.length;
@@ -444,16 +444,16 @@
                 return;
             }
 
-            const lowerQuery = query.toLowerCase();
+            const lowerQuery = query.toLowerCase().trim();
             let foundIndex = tweets.findIndex(line => {
                 const [, username] = line.split(',');
-                return username.toLowerCase() === lowerQuery;
+                return username.trim().toLowerCase() === lowerQuery;
             });
 
             if (foundIndex === -1) {
                 foundIndex = tweets.findIndex(line => {
                     const [, username] = line.split(',');
-                    return username.toLowerCase().includes(lowerQuery);
+                    return username.trim().toLowerCase().includes(lowerQuery);
                 });
             }
 
